# gb-project

./: .gitignore  Agents.md  GabonEdu_Campus_SuperPrompt.md  README.md  build-sidecar.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
backend/: database.py  main.py  requirements.txt  seed.py  seed_simple.py  seed_tables.py
backend/models/: __init__.py  cours.py  etudiant.py  filiere.py  finances.py  inscription.py  note.py  pedagogie.py  recherche.py  securite.py  sync.py  user.py  vie_etudiante.py
backend/routers/: administration.py  auth.py  etudiants.py  finances.py  pedagogie.py  recherche.py  sync.py  vie_etudiante.py
backend/schemas/: __init__.py  administration.py  auth.py  etudiant.py  finances.py  sync.py  vie_etudiante.py
backend/security/: auth.py
backend/services/: administration.py  sync.py  vie_etudiante.py
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: administration.test.ts  app.test.ts  auth-api.test.ts  auth.test.ts  formatters.test.ts  layout.test.ts  router.test.ts  sync.test.ts  types.test.ts  validation.test.ts
src/api/: auth.ts
src/components/: Layout.vue
src/lib/: api.ts  utils.ts
src/router/: index.ts
src/stores/: administration.ts  auth.ts  sync.ts
src/views/administration/: AdministrationView.vue
src/views/auth/: LoginView.vue
src/views/dashboard/: DashboardView.vue
src/views/etudiants/: EtudiantsView.vue
src/views/finances/: FinancesView.vue
src/views/pedagogie/: PedagogieView.vue
(+3 files in other folders)
